# zcached

./: Cargo.toml  justfile  rustfmt.toml
src/: client.rs  lib.rs  server.rs
zcached/: Cargo.toml
zcached-client/: Cargo.toml
zcached-client/src/: main.rs
zcached-server/: Cargo.toml
zcached-server/src/: main.rs
zcached/benches/: server.rs
zcached/src/: client.rs  db.rs  error.rs  lib.rs  serialization.rs  server.rs
zcached/tests/: integration.rs
