[package]
name = "zcached"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bench]]
name = "server"
harness = false

[dependencies]
bytes = "1.5.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
futures = "0.3"
dhat = "0.3"
rand = "0.8"
